# inc_security_crypto_valeo_pitch

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  BUILD  CONTRIBUTION.md  Cargo.toml  LICENSE  MODULE.bazel  NOTICE  README.md  build_qnx.sh  configure.sh  extensions.bzl  project_config.bzl  pyproject.toml  versions.json
.cargo/: config.toml
.github/workflows/: gitlint.yml  pre-commit.yml
cpp/: BUILD  CMakeLists.txt  demo.cpp  pkcs11.h  pkcs11_cpp.hpp  test_cpp.cpp
docs/: BUILD  conf.py  docs_runner.sh  index.rst
docs/crypto/architecture/: dynamic_architecture.rst  index.rst
examples/: BUILD  pkcs11_business_demo.rs  pkcs11_demo.rs
main/: genindex.html  index.html  metrics.json  needs.json  objects.inv  schema_violations.json  search.html  searchindex.js
main/crypto/architecture/: api_architecture.html  api_description.html  design_decisions.html  dynamic_architecture.html  index.html  interfaces.html  key_management_details.html  provider_architecture.html
main/docs/: index.html
main/docs/crypto/architecture/: api_architecture.html  api_description.html  design_decisions.html  dynamic_architecture.html  index.html  interfaces.html  key_management_details.html  provider_architecture.html
main/docs/features/: index.html
main/docs/features/feature_example/: index.html
main/docs/manuals/: index.html  safety_manual.html  security_manual.html  user_manual.html
main/docs/release/: release_note.html
main/docs/safety_mgt/: index.html  module_safety_analysis_fdr.html  module_safety_package_fdr.html  module_safety_plan.html  module_safety_plan_fdr.html
main/docs/security_mgt/: index.html  module_security_package_fdr.html  module_security_plan.html  module_security_plan_fdr.html
main/docs/verification_report/: module_verification_report.html
main/examples/docs/: architecture_modeling_example.html
parsec/: BUILD  client.rs  client_demo.rs  config.toml
parsec/scripts/: start_client.sh  start_parsec.sh
score/crypto/daemon/provider/pkcs11/cryptoki/: BUILD  Cargo.toml  attributes.rs  error.rs  lib.rs  logger.rs  openssl_provider.rs  registry.rs  traits.rs  types.rs
score/crypto/daemon/provider/pkcs11/cryptoki/cpp/: pkcs11.h  pkcs11_cpp.hpp
score/crypto/daemon/provider/pkcs11/cryptoki/pkcs11/: attribute_policy.rs  backend.rs  constants.rs  error.rs  ffi_api_core.rs  ffi_api_crypto.rs  ffi_api_v3.rs  mechanisms.rs  mod.rs  object_store.rs  session.rs  storage.rs  token.rs  types.rs
score/crypto/daemon/provider/pkcs11/cryptoki/pkcs11/backend/: digest_random.rs  keygen.rs  message_aead.rs  rsa_wrap_derive.rs  sign_verify.rs  symmetric.rs
score/crypto/daemon/provider/pkcs11/cryptoki/pkcs11/ffi_api_core/: keys_objects_attributes_find.rs  lifecycle_and_slot_token.rs  session_and_login.rs
score/crypto/daemon/provider/pkcs11/cryptoki/pkcs11/ffi_api_crypto/: digest.rs  encrypt_decrypt.rs  helpers.rs  key_wrap_derive.rs  misc_v240.rs  sign_verify.rs
score/crypto/daemon/provider/pkcs11/cryptoki/pkcs11/ffi_api_v3/: interface_discovery.rs  message_encrypt_decrypt.rs  message_sign_verify.rs  session_user.rs
score/crypto/daemon/provider/pkcs11/cryptoki/pkcs11/storage/: io.rs  locks.rs  models.rs
score/crypto/daemon/provider/pkcs11/cryptoki/tests/: BUILD  always_authenticate.rs  attribute_policy.rs  connect_disconnect.rs  copy_object.rs  encryption.rs  engine_integration.rs  hashing.rs  lifecycle.rs  mechanism_policy.rs  message_api.rs  misc.rs  object_management.rs  persistence_integration.rs  pkcs11_integration.rs  pkcs11_v3_integration.rs  profile_objects.rs  ro_session.rs  session_vs_token_objects.rs  signing.rs  slots_and_tokens.rs  storage_atomic_writes.rs  token_info.rs  wrap_acl.rs
score/crypto/daemon/provider/pkcs11/cryptoki/tests/common/: mod.rs
score/cryptoki/: error.rs  lib.rs  traits.rs
score/cryptoki/pkcs11/: backend.rs  ffi_api_core.rs  ffi_api_v3.rs  mod.rs  object_store.rs  token.rs
score/cryptoki/tests/: BUILD  attribute_policy.rs  connect_disconnect.rs  engine_integration.rs  hashing.rs  message_api.rs  misc.rs  pkcs11_integration.rs  pkcs11_v3_integration.rs  profile_objects.rs  ro_session.rs  signing.rs  slots_and_tokens.rs  storage_atomic_writes.rs
src/: BUILD  attributes.rs  error.rs  lib.rs  logger.rs  openssl_engine.rs  openssl_provider.rs  registry.rs  traits.rs  types.rs
src/pkcs11/: attribute_policy.rs  backend.rs  constants.rs  error.rs  ffi_api_v3.rs  mechanisms.rs  mod.rs  object_store.rs  session.rs  storage.rs  token.rs  types.rs
src/pkcs11/backend/: attributes.rs  digest_random.rs  keygen.rs  message_aead.rs  rsa_wrap_derive.rs  sign_verify.rs  symmetric.rs
src/pkcs11/ffi_api_core/: keys_objects_attributes_find.rs  lifecycle_and_slot_token.rs  session_and_login.rs
src/pkcs11/ffi_api_crypto/: digest.rs  encrypt_decrypt.rs  helpers.rs  key_wrap_derive.rs  misc_v240.rs  sign_verify.rs
src/pkcs11/ffi_api_v3/: interface_discovery.rs  message_encrypt_decrypt.rs  message_sign_verify.rs  session_user.rs
src/pkcs11/storage/: helpers.rs  io.rs  locks.rs  models.rs  path.rs
tests/: BUILD  always_authenticate.rs  attribute_policy.rs  connect_disconnect.rs  copy_object.rs  encryption.rs  engine_integration.rs  hashing.rs  hmac.rs  lifecycle.rs  logging_smoke.rs  mechanism_policy.rs  message_api.rs  misc.rs  object_management.rs  persistence_integration.rs  pkcs11_integration.rs  pkcs11_v3_integration.rs  profile_objects.rs  ro_session.rs  session_vs_token_objects.rs  signing.rs  slots_and_tokens.rs  storage_atomic_writes.rs  token_info.rs  wrap_acl.rs
tests/common/: mod.rs
tests/cpp/: BUILD  run_cpp_tests.sh  run_test_cpp.sh  test_main.cpp
tests/integration_tests/: BUILD  cryptoki_demo_client.cpp  init_softhsm_token.cpp  integration_test.py  score_api_mac_example.cpp  score_demo.cpp
tests/provider_test/: test_pkcs11_multi_token.cpp  test_pkcs11_provider.cpp
tests/rust/: BUILD  run_rust_tests.sh  test_main.rs
tests/test_vectors/config/: integration_test_config.json
tests/test_vectors/key_management/: run_cpp_tests.sh  run_pkcs11test.sh
tools/: qnx_credential_helper.py
(+64 files in other folders)
