[package]
name        = "cryptoki"
version     = "0.1.0"
edition     = "2021"
description = "PKCS#11 v3.0 software token with a multi-provider registry and pluggable crypto backends"
license     = "Apache-2.0"

[lib]
name       = "cryptoki"
path       = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "parsec_client"
path = "parsec/client.rs"

[[example]]
name = "pkcs11_demo"
path = "examples/pkcs11_demo.rs"

[[example]]
name = "pkcs11_business_demo"
path = "examples/pkcs11_business_demo.rs"

[[example]]
name = "parsec_client_demo"
path = "parsec/client_demo.rs"

[dependencies]
libc           = "0.2"
parsec-client  = "0.16"
openssl     = "0.10"
parking_lot = "0.12"
once_cell   = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
dirs        = "5"
zeroize     = { version = "1", features = ["derive"] }
argon2      = { version = "0.5", features = ["std"] }
tempfile    = "3"

[dev-dependencies]
serial_test = "3"
