[package]
name        = "cryptoki"
version     = "0.1.0"
edition     = "2021"
description = "PKCS#11 v3.0 software token with a multi-provider registry and pluggable crypto backends"
license     = "Apache-2.0"

[lib]
name       = "cryptoki"
path       = "lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
libc           = "0.2"
parsec-client  = "0.16"
openssl     = "0.10"
parking_lot = "0.12"
once_cell   = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
dirs        = "5"
zeroize     = { version = "1", features = ["derive"] }
argon2      = { version = "0.5", features = ["std"] }
tempfile    = "3"

[dev-dependencies]
serial_test = "3"
